[package]
name = "heston-calibration"
version = "0.1.0"
edition = "2026"

[[bin]]
name = "heston-calibration"
path = "src/main.rs"

[lib]
name = "heston_calibration"
path = "src/lib.rs"

[dependencies]
# Arithmétique sur les nombres complexes
num-complex = "0.4"

# Lecture de fichiers CSV (données de marché)
csv = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Comparaisons flottantes approchées dans les tests
approx = "0.5"
