[package]
name = "heston-calibration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heston-calibration"
path = "src/main.rs"

[lib]
name = "heston_calibration"
path = "src/lib.rs"

[dependencies]
# Arithmétique sur les nombres complexes
num-complex = "0.4"

# Lecture de fichiers CSV (données de marché)
csv = "1"
serde = { version = "1", features = ["derive"] }

# Optimisation sans gradient (NelderMead pour la phase 2)
argmin = "0.10"
argmin-math = { version = "0.4", features = ["vec"] }


[dev-dependencies]
# Comparaisons flottantes approchées dans les tests
approx = "0.5"
